2021-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (ReadOnePNGImage): Support the define
        png:chunk-malloc-max=limit in order to allow reading PNG files
        which report "chunk data is too large" or to reduce the default
        limit.  The default libpng limit is 8,000,000 bytes, which is more
        than sufficient for normal files.  Note that since PNG uses
        compression, the limit is on the uncompressed data and a
        relatively small file may be able to provide a chunk which
        decompresses to a large size.  Addresses SourceForge #594 "Be able
        to affect libpng user_chunk_malloc_max".

2021-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * PerlMagick/Magick.xs: Fix issue that image fill attribute had
        its opacity reset to transparent so it could not be usefully set
        at image scope.  Note that this fix may change results if the fill
        attribute is not set since then the default will actually be used.
        Support Get of "fill" and "stroke".  Addresses SourceForge issue
        #650 "Image attributes not working and not as documented for
        PerlMagick".  Eliminate use of dangerous strncpy().

        * magick/transform.c (TransformImage): Trace crop geometry. Trace
        transform geometry.
        (CropImage): Trace crop geometry. Trace bounding page.

        * Magick++/lib/Image.cpp (Magick::Image::trim): Trim requires
        NorthWestGravity.

        * magick/command.c (MogrifyImage): Trim requires
        NorthWestGravity. Fixes SourceForge issue #653 "convert: warning
        when using -gravity with -trim".  This was more than a warning.

2021-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c: Properly support passing JasPer options for
        decoder and encoder, including the 'debug' option.
        (initialize_jasper): Call jas_conf_set_allocator() and pass the